WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
43753
[chromium] Geolocation breaks the compile if ENABLE_GEOLOCATION is set to 0
https://bugs.webkit.org/show_bug.cgi?id=43753
Summary
[chromium] Geolocation breaks the compile if ENABLE_GEOLOCATION is set to 0
James Robinson
Reported
2010-08-09 15:45:43 PDT
If the feature is off the build should still work. Instead there are compile errors: WebCore/bindings/v8/custom/V8CustomPositionCallback.cpp:68: error: no matching function for call to ‘toV8(WebCore::Geoposition*&)’ out/Release/obj/gen/webkit/bindings/V8Event.h:49: note: candidates are: v8::Handle<v8::Value> WebCore::toV8(WebCore::Event*) out/Release/obj/gen/webkit/bindings/V8Event.h:50: note: v8::Handle<v8::Value> WebCore::toV8(WTF::PassRefPtr<WebCore::Event>) out/Release/obj/gen/webkit/bindings/V8XPathNSResolver.h:47: note: v8::Handle<v8::Value> WebCore::toV8(WebCore::XPathNSResolver*) out/Release/obj/gen/webkit/bindings/V8XPathNSResolver.h:48: note: v8::Handle<v8::Value> WebCore::toV8(WTF::PassRefPtr<WebCore::XPathNSResolver>) WebCore/bindings/v8/custom/V8CustomPositionErrorCallback.cpp: In member function ‘virtual void WebCore::V8CustomPositionErrorCallback::handleEvent(WebCore::PositionError*)’: WebCore/bindings/v8/custom/V8CustomPositionErrorCallback.cpp:68: error: no matching function for call to ‘toV8(WebCore::PositionError*&)’ out/Release/obj/gen/webkit/bindings/V8Event.h:49: note: candidates are: v8::Handle<v8::Value> WebCore::toV8(WebCore::Event*) out/Release/obj/gen/webkit/bindings/V8Event.h:50: note: v8::Handle<v8::Value> WebCore::toV8(WTF::PassRefPtr<WebCore::Event>) out/Release/obj/gen/webkit/bindings/V8XPathNSResolver.h:47: note: v8::Handle<v8::Value> WebCore::toV8(WebCore::XPathNSResolver*) out/Release/obj/gen/webkit/bindings/V8XPathNSResolver.h:48: note: v8::Handle<v8::Value> WebCore::toV8(WTF::PassRefPtr<WebCore::XPathNSResolver>) make: *** [out/Release/obj.target/webcore/WebCore/bindings/v8/custom/V8CustomPositionCallback.o] Error 1
Attachments
Patch
(2.68 KB, patch)
2010-08-11 07:19 PDT
,
Steve Block
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
jochen
Comment 1
2010-08-09 23:43:42 PDT
yeah, looks like all of these should be protected by #if ENABLE(GEOLOCATION) ... #endif
Steve Block
Comment 2
2010-08-11 07:19:30 PDT
Created
attachment 64110
[details]
Patch
WebKit Commit Bot
Comment 3
2010-08-11 16:47:03 PDT
Comment on
attachment 64110
[details]
Patch Clearing flags on attachment: 64110 Committed
r65199
: <
http://trac.webkit.org/changeset/65199
>
WebKit Commit Bot
Comment 4
2010-08-11 16:47:08 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug