2010-08-11  Steve Block  <steveblock@google.com>

Reviewed by David Levin.

        [chromium] Geolocation breaks the compile if ENABLE_GEOLOCATION is set to 0
        https://bugs.webkit.org/show_bug.cgi?id=43753

        This change guards the entire contents of the V8 custom bindings files
        with ENABLE(GEOLOCATION) to match JSC.

        No new tests, build fix only.

        * bindings/v8/custom/V8CustomPositionCallback.cpp:
        * bindings/v8/custom/V8CustomPositionErrorCallback.cpp:
        * bindings/v8/custom/V8GeolocationCustom.cpp:

Canonical link: https://commits.webkit.org/55999@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65199 268f45cc-cd09-0410-ab3c-d52691b4dbfc